unpackaged/main/default/objects/FPC_Lease_Quote__c/FPC_Lease_Quote__c.object-meta.xml
<CustomObject>
    <description>Leasing Quote Record</description>
    <label>Lease Quote</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Lease Quote ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Lease Quotes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>