unpackaged/main/default/objects/FPC_Lease_Quote__c/fields/Actual_points_earned_in_a_60_month_term__c.field-meta.xml
<CustomField>
    <fullName>Actual_points_earned_in_a_60_month_term__c</fullName>
    <description>Actual points earned in a 60 month term lease.</description>
    <inlineHelpText>Actual points earned in a 60 month term lease.</inlineHelpText>
    <label>Points 60</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>