unpackaged/main/default/objects/FPC_Lease_Quote__c/fields/APPROVED_AMT__c.field-meta.xml
<CustomField>
    <fullName>APPROVED_AMT__c</fullName>
    <description>Amount approved associated with the lease quote.</description>
    <inlineHelpText>Amount approved associated with the lease quote.</inlineHelpText>
    <label>APPROVED_AMT</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>