unpackaged/main/default/objects/FPC_Lease_Quote__c/fields/Apr_36__c.field-meta.xml
<CustomField>
    <fullName>Apr_36__c</fullName>
    <description>APR (Annual Percentage Rate) for the 36 month term.</description>
    <inlineHelpText>APR (Annual Percentage Rate) for the 36 month term.</inlineHelpText>
    <label>Apr-36</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>