unpackaged/main/default/objects/FPC_Lease_Quote__c/fields/Buy_Rate_24__c.field-meta.xml
<CustomField>
    <fullName>Buy_Rate_24__c</fullName>
    <description>Buy rate at a 24 month term.</description>
    <inlineHelpText>Type in the buy rate at a 24 month term associated with the opportunity.</inlineHelpText>
    <label>Buy Rate 24</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>