unpackaged/main/default/objects/FPC_Lease_Quote__c/fields/Buy_Rate_48__c.field-meta.xml
<CustomField>
    <fullName>Buy_Rate_48__c</fullName>
    <description>Buy rate at a 48 month term.</description>
    <inlineHelpText>Buy rate at a 48 month term.</inlineHelpText>
    <label>Buy Rate 48</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>