unpackaged/main/default/objects/FPC_Lease_Quote__c/fields/Computation__c.field-meta.xml
<CustomField>
    <fullName>Computation__c</fullName>
    <label>Computation</label>
    <length>32</length>
    <type>Text</type>
</CustomField>