unpackaged/main/default/objects/FPC_Lease_Quote__c/fields/Contact_Pmt_DBO_24__c.field-meta.xml
<CustomField>
    <fullName>Contact_Pmt_DBO_24__c</fullName>
    <description>Contact payment of a 24 month term DBO lease.</description>
    <inlineHelpText>Contact payment of a 24 month term DBO lease.</inlineHelpText>
    <label>Contact Pmt DBO 24</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>