unpackaged/main/default/objects/FPC_Lease_Quote__c/fields/Contact_Pmt_FMV_60__c.field-meta.xml
<CustomField>
    <fullName>Contact_Pmt_FMV_60__c</fullName>
    <description>Contact payment of a 60 month term FMV lease.</description>
    <inlineHelpText>Contact payment of a 60 month term FMV lease.</inlineHelpText>
    <label>Contact Pmt FMV 60</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>