unpackaged/main/default/objects/FPC_Lease_Quote__c/fields/Createdate__c.field-meta.xml
<CustomField>
    <fullName>Createdate__c</fullName>
    <description>Date that the FPC Lease Quote was created is recorded.</description>
    <inlineHelpText>Date that the FPC Lease Quote was created is recorded.</inlineHelpText>
    <label>Createdate</label>
    <type>DateTime</type>
</CustomField>