unpackaged/main/default/objects/FPC_Lease_Quote__c/fields/Createuser__c.field-meta.xml
<CustomField>
    <fullName>Createuser__c</fullName>
    <description>User who created the FPC Lease Quote is recorded.</description>
    <inlineHelpText>User who created the FPC Lease Quote is recorded.</inlineHelpText>
    <label>Createuser</label>
    <length>12</length>
    <type>Text</type>
</CustomField>