unpackaged/main/default/objects/FPC_Lease_Quote__c/fields/Criteria__c.field-meta.xml
<CustomField>
    <fullName>Criteria__c</fullName>
    <label>Criteria</label>
    <length>64</length>
    <type>Text</type>
</CustomField>