unpackaged/main/default/objects/FPC_Lease_Quote__c/fields/DBO_Lost_Margin_48__c.field-meta.xml
<CustomField>
    <fullName>DBO_Lost_Margin_48__c</fullName>
    <description>Lost margin in a 48 month term DBO lease.</description>
    <inlineHelpText>Lost margin in a 48 month term DBO lease.</inlineHelpText>
    <label>DBO Lost Margin 48</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>