unpackaged/main/default/objects/FPC_Lease_Quote__c/fields/DBO_LRF_60__c.field-meta.xml
<CustomField>
    <fullName>DBO_LRF_60__c</fullName>
    <description>Lease rate factor for a 60 month term DBO lease.</description>
    <inlineHelpText>Lease rate factor for a 60 month term DBO lease.</inlineHelpText>
    <label>DBO LRF 60</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>