unpackaged/main/default/objects/FPC_Lease_Quote__c/fields/DBO_Pmt_NoTax_60__c.field-meta.xml
<CustomField>
    <fullName>DBO_Pmt_NoTax_60__c</fullName>
    <description>Payment without tax on a 60 month term DBO lease.</description>
    <inlineHelpText>Payment without tax on a 60 month term DBO lease.</inlineHelpText>
    <label>DBO Pmt NoTax 60</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>