unpackaged/main/default/objects/FPC_Lease_Quote__c/fields/DBO_Sales_Tax_24__c.field-meta.xml
<CustomField>
    <fullName>DBO_Sales_Tax_24__c</fullName>
    <description>Sales tax for a 24 month term DBO lease.</description>
    <inlineHelpText>Sales tax for a 24 month term DBO lease.</inlineHelpText>
    <label>DBO Sales Tax 24</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>