unpackaged/main/default/objects/FPC_Lease_Quote__c/fields/DBO_Sales_Tax_48__c.field-meta.xml
<CustomField>
    <fullName>DBO_Sales_Tax_48__c</fullName>
    <description>Sales tax for a 48 month term DBO lease.</description>
    <inlineHelpText>Sales tax for a 48 month term DBO lease.</inlineHelpText>
    <label>DBO Sales Tax 48</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>