unpackaged/main/default/objects/FPC_Lease_Quote__c/fields/Deferral_Pmt_DBO_60__c.field-meta.xml
<CustomField>
    <fullName>Deferral_Pmt_DBO_60__c</fullName>
    <description>Deferral Payment of a 60 month term DBO lease.</description>
    <inlineHelpText>Deferral Payment of a 60 month term DBO lease.</inlineHelpText>
    <label>Deferral Pmt DBO 60</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>