unpackaged/main/default/objects/FPC_Lease_Quote__c/fields/Deferral_Pmt_FMV_48__c.field-meta.xml
<CustomField>
    <fullName>Deferral_Pmt_FMV_48__c</fullName>
    <description>Deferral Payment of a 48 month term FMV lease.</description>
    <inlineHelpText>Deferral Payment of a 48 month term FMV lease.</inlineHelpText>
    <label>Deferral Pmt FMV 48</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>