unpackaged/main/default/objects/FPC_Lease_Quote__c/fields/Equipment_Cost_1__c.field-meta.xml
<CustomField>
    <fullName>Equipment_Cost_1__c</fullName>
    <description>Equipment Piece 1 - Cost</description>
    <inlineHelpText>Type in the cost of Equipment piece 1.</inlineHelpText>
    <label>Equipment Cost 1</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>