unpackaged/main/default/objects/FPC_Lease_Quote__c/fields/Equipment_Cost_2__c.field-meta.xml
<CustomField>
    <fullName>Equipment_Cost_2__c</fullName>
    <description>Equipment Piece 2 - Cost</description>
    <inlineHelpText>Type in the cost of Equipment piece 2.</inlineHelpText>
    <label>Equipment Cost 2</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>