unpackaged/main/default/objects/FPC_Lease_Quote__c/fields/Equipment_Cost_4__c.field-meta.xml
<CustomField>
    <fullName>Equipment_Cost_4__c</fullName>
    <description>Equipment Piece 4 - Cost</description>
    <inlineHelpText>Type in the cost of Equipment piece- 4.</inlineHelpText>
    <label>Equipment Cost 4</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>