unpackaged/main/default/objects/FPC_Lease_Quote__c/fields/FMV_APR_48__c.field-meta.xml
<CustomField>
    <fullName>FMV_APR_48__c</fullName>
    <description>APR(Annual Percentage Rate) for a 48 month FMV lease.</description>
    <inlineHelpText>APR(Annual Percentage Rate) for a 48 month FMV lease.</inlineHelpText>
    <label>FMV APR 48</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>