unpackaged/main/default/objects/FPC_Lease_Quote__c/fields/FMV_Buy_Rate_48__c.field-meta.xml
<CustomField>
    <fullName>FMV_Buy_Rate_48__c</fullName>
    <description>Buy Rate for a 48 month term FMV lease.</description>
    <inlineHelpText>Buy Rate for a 48 month term FMV lease.</inlineHelpText>
    <label>FMV Buy Rate 48</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>