unpackaged/main/default/objects/FPC_Lease_Quote__c/fields/FMV_FPC_Margin_48__c.field-meta.xml
<CustomField>
    <fullName>FMV_FPC_Margin_48__c</fullName>
    <description>FPC Margin from a 48 month term FMV lease.</description>
    <inlineHelpText>FPC Margin from a 48 month term FMV lease.</inlineHelpText>
    <label>FMV FPC Margin 48</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>