unpackaged/main/default/objects/FPC_Lease_Quote__c/fields/FMV_Lost_Margin_48__c.field-meta.xml
<CustomField>
    <fullName>FMV_Lost_Margin_48__c</fullName>
    <description>Lost margin in a 48 month term FMV lease.</description>
    <inlineHelpText>Lost margin in a 48 month term FMV lease.</inlineHelpText>
    <label>FMV Lost Margin 48</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>