unpackaged/main/default/objects/FPC_Lease_Quote__c/fields/FMV_LRF_24__c.field-meta.xml
<CustomField>
    <fullName>FMV_LRF_24__c</fullName>
    <description>Lease rate factor for a 24 month term FMV lease.</description>
    <inlineHelpText>Lease rate factor for a 24 month term FMV lease.</inlineHelpText>
    <label>FMV LRF 24</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>