unpackaged/main/default/objects/FPC_Lease_Quote__c/fields/FMV_Monthly_Pmt_36__c.field-meta.xml
<CustomField>
    <fullName>FMV_Monthly_Pmt_36__c</fullName>
    <description>Monthly payments in a 36 month term FMV lease.</description>
    <inlineHelpText>Monthly payments in a 36 month term FMV lease.</inlineHelpText>
    <label>FMV Monthly Pmt 36</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>