unpackaged/main/default/objects/FPC_Lease_Quote__c/fields/FMV_Points_36__c.field-meta.xml
<CustomField>
    <fullName>FMV_Points_36__c</fullName>
    <description>Points in the 36 month term FMV lease.</description>
    <inlineHelpText>Points in the 36 month term FMV lease.</inlineHelpText>
    <label>FMV Points 36</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>