unpackaged/main/default/objects/FPC_Lease_Quote__c/fields/FMV_Sales_Tax_24__c.field-meta.xml
<CustomField>
    <fullName>FMV_Sales_Tax_24__c</fullName>
    <description>Sales tax for a 36 month term FMV lease.</description>
    <inlineHelpText>Sales tax for a 36 month term FMV lease.</inlineHelpText>
    <label>FMV Sales Tax 24</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>