unpackaged/main/default/objects/FPC_Lease_Quote__c/fields/FMV_Tax_UpFront__c.field-meta.xml
<CustomField>
    <fullName>FMV_Tax_UpFront__c</fullName>
    <defaultValue>false</defaultValue>
    <description>FMV Tax Upfront- Status</description>
    <inlineHelpText>Check box if tax will be collected upfront on a FMV lease.</inlineHelpText>
    <label>FMV Tax UpFront</label>
    <type>Checkbox</type>
</CustomField>