unpackaged/main/default/objects/FPC_Lease_Quote__c/fields/FMV_Total_Pmts_24__c.field-meta.xml
<CustomField>
    <fullName>FMV_Total_Pmts_24__c</fullName>
    <description>Total of payments for a 24 month term FMV lease.</description>
    <inlineHelpText>Total of payments for a 24 month term FMV lease.</inlineHelpText>
    <label>FMV Total Pmts 24</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>