unpackaged/main/default/objects/FPC_Lease_Quote__c/fields/Fpc_Lease_Quoteid__c.field-meta.xml
<CustomField>
    <fullName>Fpc_Lease_Quoteid__c</fullName>
    <description>ID for lease quote in a custom object lookup.</description>
    <inlineHelpText>ID for lease quote in a custom object lookup.</inlineHelpText>
    <label>Fpc Lease Quoteid</label>
    <length>12</length>
    <type>Text</type>
</CustomField>