unpackaged/main/default/objects/FPC_Lease_Quote__c/fields/FPC_Margin_48__c.field-meta.xml
<CustomField>
    <fullName>FPC_Margin_48__c</fullName>
    <description>FPC Margin - 48 month term.</description>
    <inlineHelpText>FPC Margin - 48 month term.</inlineHelpText>
    <label>FPC Margin 48</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>