unpackaged/main/default/objects/FPC_Lease_Quote__c/fields/Include_24__c.field-meta.xml
<CustomField>
    <fullName>Include_24__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Include the 24 month term in customer quote</description>
    <inlineHelpText>Check box if 24 month term is to be included in customer quote.</inlineHelpText>
    <label>Include 24</label>
    <type>Checkbox</type>
</CustomField>