unpackaged/main/default/objects/FPC_Lease_Quote__c/fields/Include_36__c.field-meta.xml
<CustomField>
    <fullName>Include_36__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Include the 36 month term in customer quote</description>
    <inlineHelpText>Check box if 36 month term is to be included in customer quote.</inlineHelpText>
    <label>Include 36</label>
    <type>Checkbox</type>
</CustomField>