unpackaged/main/default/objects/FPC_Lease_Quote__c/fields/Include_48__c.field-meta.xml
<CustomField>
    <fullName>Include_48__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Include the 48 month term in customer quote</description>
    <inlineHelpText>Check box if 48 month term is to be included in customer quote.</inlineHelpText>
    <label>Include 48</label>
    <type>Checkbox</type>
</CustomField>