unpackaged/main/default/objects/FPC_Lease_Quote__c/fields/Lender_Fee_48__c.field-meta.xml
<CustomField>
    <fullName>Lender_Fee_48__c</fullName>
    <description>Lender fee for 48 month term lease.</description>
    <inlineHelpText>Lender fee for 48 month term lease.</inlineHelpText>
    <label>Lender Fee 48</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>