unpackaged/main/default/objects/FPC_Lease_Quote__c/fields/LenderID__c.field-meta.xml
<CustomField>
    <fullName>LenderID__c</fullName>
    <description>ID for the lender in a custom object lookup.</description>
    <inlineHelpText>ID for the lender in a custom object lookup.</inlineHelpText>
    <label>LenderID</label>
    <length>12</length>
    <type>Text</type>
</CustomField>