unpackaged/main/default/objects/FPC_Lease_Quote__c/fields/MAX_POINTS_24__c.field-meta.xml
<CustomField>
    <fullName>MAX_POINTS_24__c</fullName>
    <description>Maximum points allowed on a 24 month term lease.</description>
    <inlineHelpText>Maximum points allowed on a 24 month term lease.</inlineHelpText>
    <label>MAX POINTS 24</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>