unpackaged/main/default/objects/FPC_Lease_Quote__c/fields/Max_Points_36__c.field-meta.xml
<CustomField>
    <fullName>Max_Points_36__c</fullName>
    <description>Maximum points allowed on a 36 month term lease.</description>
    <inlineHelpText>Maximum points allowed on a 36 month term lease.</inlineHelpText>
    <label>Max Points 36</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>