unpackaged/main/default/objects/FPC_Lease_Quote__c/fields/Max_Points__c.field-meta.xml
<CustomField>
    <fullName>Max_Points__c</fullName>
    <description>Maximum points allowed to added to the deal by lender.</description>
    <inlineHelpText>Maximum points allowed to added to the deal by lender.</inlineHelpText>
    <label>Max Points</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>