unpackaged/main/default/objects/FPC_Lease_Quote__c/fields/Max_Points_Per_Term__c.field-meta.xml
<CustomField>
    <fullName>Max_Points_Per_Term__c</fullName>
    <description>Maximum points allowed per lease term.</description>
    <inlineHelpText>Maximum points allowed per lease term.</inlineHelpText>
    <label>Max Points Per Term</label>
    <length>1</length>
    <type>Text</type>
</CustomField>