unpackaged/main/default/objects/FPC_Lease_Quote__c/fields/Modifyuser__c.field-meta.xml
<CustomField>
    <fullName>Modifyuser__c</fullName>
    <description>Modify user for FPC Lease Quote is recorded.</description>
    <inlineHelpText>Modify user for FPC Lease Quote is recorded.</inlineHelpText>
    <label>Modifyuser</label>
    <length>12</length>
    <type>Text</type>
</CustomField>