unpackaged/main/default/objects/FPC_Lease_Quote__c/fields/Monthly_Pmt_48__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Pmt_48__c</fullName>
    <description>Monthly payment for 48 month term</description>
    <inlineHelpText>Monthly payment for 48 month term</inlineHelpText>
    <label>Monthly Pmt 48</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>