unpackaged/main/default/objects/FPC_Lease_Quote__c/fields/Months_Prepaid__c.field-meta.xml
<CustomField>
    <fullName>Months_Prepaid__c</fullName>
    <description>The number of months in which lease payments are prepaid for.</description>
    <inlineHelpText>Type in the number of months in which lease payments have been prepaid for.</inlineHelpText>
    <label>Months Prepaid</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>