unpackaged/main/default/objects/FPC_Lease_Quote__c/fields/Net_of_Equip_60__c.field-meta.xml
<CustomField>
    <fullName>Net_of_Equip_60__c</fullName>
    <description>Net equipment cost 60 month term</description>
    <inlineHelpText>Net equipment cost 60 month term</inlineHelpText>
    <label>Net of Equip 60</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>