unpackaged/main/default/objects/FPC_Lease_Quote__c/fields/Opp_Description__c.field-meta.xml
<CustomField>
    <fullName>Opp_Description__c</fullName>
    <description>Description of the associated opportunity.</description>
    <inlineHelpText>Type in a description of an associated opportunity.</inlineHelpText>
    <label>Opp_Description</label>
    <length>128</length>
    <type>Text</type>
</CustomField>