unpackaged/main/default/objects/FPC_Lease_Quote__c/fields/OUT_RANGE_POINTS__c.field-meta.xml
<CustomField>
    <fullName>OUT_RANGE_POINTS__c</fullName>
    <label>OUT_RANGE_POINTS</label>
    <length>1</length>
    <type>Text</type>
</CustomField>