unpackaged/main/default/objects/FPC_Lease_Quote__c/fields/Points_36__c.field-meta.xml
<CustomField>
    <fullName>Points_36__c</fullName>
    <description>Actual points earned in a 36 month term lease.</description>
    <inlineHelpText>Actual points earned in a 36 month term lease.</inlineHelpText>
    <label>Points 36</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>