unpackaged/main/default/objects/FPC_Lease_Quote__c/fields/Points__c.field-meta.xml
<CustomField>
    <fullName>Points__c</fullName>
    <description>Points in the transaction.</description>
    <inlineHelpText>Type in the points desired to be added to the lease transaction.</inlineHelpText>
    <label>Points</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>