unpackaged/main/default/objects/FPC_Lease_Quote__c/fields/Pre_Paid_Interest__c.field-meta.xml
<CustomField>
    <fullName>Pre_Paid_Interest__c</fullName>
    <description>Prepaid interest</description>
    <inlineHelpText>Type in the amount of prepaid interest associated with the lease.</inlineHelpText>
    <label>Pre Paid Interest</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>