unpackaged/main/default/objects/FPC_Lease_Quote__c/fields/PrePaid_Sales_Tax__c.field-meta.xml
<CustomField>
    <fullName>PrePaid_Sales_Tax__c</fullName>
    <description>Prepaid sales tax</description>
    <inlineHelpText>Type in the amount of prepaid sales tax.</inlineHelpText>
    <label>PrePaid Sales Tax</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>