unpackaged/main/default/objects/FPC_Lease_Quote__c/fields/QUOTE_TIER__c.field-meta.xml
<CustomField>
    <fullName>QUOTE_TIER__c</fullName>
    <description>Credit tier associated with the lease quote.</description>
    <inlineHelpText>Credit tier associated with the lease quote.</inlineHelpText>
    <label>QUOTE_TIER</label>
    <length>2</length>
    <type>Text</type>
</CustomField>