unpackaged/main/default/objects/FPC_Lease_Quote__c/fields/QUOTE_TYPE__c.field-meta.xml
<CustomField>
    <fullName>QUOTE_TYPE__c</fullName>
    <label>QUOTE_TYPE</label>
    <length>32</length>
    <type>Text</type>
</CustomField>