unpackaged/main/default/objects/FPC_Lease_Quote__c/fields/Security_Deposit__c.field-meta.xml
<CustomField>
    <fullName>Security_Deposit__c</fullName>
    <description>Security deposit for a lease transcation.</description>
    <inlineHelpText>Type in the amount of the security deposit.</inlineHelpText>
    <label>Security Deposit</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>